<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Boneyard Breakout</string>
    <string name="game_over">Game Over!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="start_button">Start</string>
    <string name="title_activity_game_over">GameOverActivity</string>
    <string name="new_game">New Game</string>
    <string name="name_hint">Enter Name</string>
    <string name="submit_score">Submit Score</string>
    <string name="clear_scores">Clear Scores</string>
    <string name="start_multi">Start Multiplayer</string>
    <string name="title_activity_multi">MultiActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_splash_screen">SplashScreen</string>
    <string name="title_activity_story">StoryActivity</string>
    <string name="title_activity_char_name">CharName</string>
    <string name="char_name">Enter Name</string>
    <string name="startButton">Start</string>
    <string name="skipButton">Skip</string>

</resources>
