<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/kiddeadboneyard"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.virginia.edu.cs2110_group22.GameOverActivity" >

    <TextView
        android:id="@+id/over_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/game_over"
        android:textColor="#FFFFFF" />
    <TextView
        android:id="@+id/count_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/over_text"
        android:textColor="#FFFFFF" />
    <EditText 
        android:id="@+id/name_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/name_hint"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        />

    <Button
        android:id="@+id/score_button"
        android:layout_width="300dp"
        android:layout_height="75dp"
        android:layout_below="@id/name_edit"
        android:layout_centerHorizontal="true"
        android:onClick="submitScore"
        android:scaleType="fitXY"
        android:text="@string/submit_score" />

    <Button
        android:id="@+id/clear_scores"
        android:layout_width="300dp"
        android:layout_height="75dp"
        android:layout_below="@id/score_button"
        android:layout_centerHorizontal="true"
        android:onClick="clearScores"
        android:scaleType="fitXY"
        android:text="@string/clear_scores" />
    
    <Button
        android:id="@+id/start_new"
        android:layout_width="300dp"
        android:layout_height="75dp"
        android:layout_below="@id/clear_scores"
        android:layout_centerHorizontal="true"
        android:onClick="newGame"
        android:scaleType="fitXY"
        android:text="@string/new_game" />

    <TextView
        android:id="@+id/high_scores"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/count_text"
        android:textColor="#FFFFFF"
        />
    

</RelativeLayout>
